# QtInstrumentControl

./: .gitmodules  README.md
CameraControl/: AbstractStreamingCamera.cpp  AbstractStreamingCamera.h  AndorCamera.cpp  AndorCamera.h  AndorControlDisplay.cpp  AndorControlDisplay.h  AndorControlWidget.cpp  AndorControlWidget.h  CMakeLists.txt  CUDAOpenGLWindow.cpp  CameraControlWidget.cpp  CameraControlWidget.h  ImageBuffer.cpp  ImageBuffer.h  ImageWriter.cpp  ImageWriter.h  XimeaCamera.cpp  XimeaCamera.h  XimeaCameraPrivate.cpp  XimeaCameraPrivate.h  XimeaControlDisplay.cpp  XimeaControlDisplay.h
CameraControlTest/: AndorTest.cpp  CMakeLists.txt
InstrumentControl/: AbstractArduinoDevice.cpp  AbstractArduinoDevice.h  AbstractImageWriter.cpp  AbstractImageWriter.h  ArduinoCounter.cpp  ArduinoCounter.cpp.orig  ArduinoCounter.h  CMakeLists.txt  ControlBinder.h  GenericNewportController.cpp  GenericNewportController.h  ImageRenderWidget.cpp  ImageRenderWidget.h  ImageRenderWindow.h  ImageRenderWindow.ui  ImageSource.cpp  ImageSource.h  NewportNSC200.h  NewportSMC100.h  PMTStatusWidget.h  ParametricImageSource.h  SerialDevice.cpp  SerialDevice.h  ThorlabsAPTCommands.h  ThorlabsAPTController.cpp  ThorlabsAPTController.h  ThreadedObject.cpp  ThreadedObject.h
InstrumentControlTest/: ArduinoCounterTest.cpp  ArduinoCounterTest.h  ArduinoCounterTest.ui  CMakeLists.txt
InstrumentControlUI/: AbstractImageWriter.cpp  BoundControl.h  BoundControlImpl.h  BoundPropertyControl.h  BoundPropertyControlImpl.h  CMakeLists.txt  ConstrainedMdiSubWindow.h  ControlBinder.h  CustomDialog.cpp  CustomDialog.h  ImageRenderWidget.cpp  ImageRenderWidget.h  ImageRenderWindow.h  ImageSeriesControl.h  ImageSeriesControl.ui  ImageSeriesScanner.h  ImageSource.cpp  ParameterWidget.cpp  ParameterWidget.h  QLedIndicator.cpp  QLedIndicator.h  TaskProgress.cpp  TaskProgress.h  TaskProgressWidget.h  TaskProgressWidget.ui
